<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="3dp" >

    <TextView
        android:id="@+id/newMileTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_mile_type"
        android:layout_marginTop="6dp"
        android:layout_margin="5dp" />
    
    <RadioGroup
        android:id="@+id/typeRadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"  >

        <RadioButton
            android:id="@+id/schoolRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/new_school_mile"
            android:layout_weight="1"
            android:layout_margin="5dp"  />
        

        <RadioButton
            android:id="@+id/homeRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_home_mile"
            android:layout_weight="1"
            android:layout_margin="5dp"  />

        <RadioButton
            android:id="@+id/sportRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_sport_mile"
            android:layout_weight="1"
            android:layout_margin="5dp"  />

    </RadioGroup>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_margin="5dp"  >

        <TextView
            android:id="@+id/newMileTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_mile_time"
            android:layout_margin="5dp"  />

        <Button
            android:id="@+id/timeButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"  />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_margin="5dp"  >

        <TextView
            android:id="@+id/newMileDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_mile_date"
            android:layout_margin="5dp"  />

        <Button
            android:id="@+id/dateButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"  />

    </TableRow>

    
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_margin="5dp"
        android:layout_marginBottom="5dp"  >
        
       <TextView
        android:id="@+id/lengthTextView"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/new_mile_length"
        android:layout_margin="5dp" />
       
       <EditText 
           android:inputType="numberDecimal"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/lengthEditText"
           android:layout_weight="1"
           android:layout_margin="5dp" />
    </TableRow>
    
    
    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_mile_description"
        android:layout_marginTop="12dp"
        android:layout_margin="5dp"  />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:layout_marginTop="20dp"
        android:layout_margin="5dp"  >

        <requestFocus />
        
    </EditText>

</TableLayout>